--- a/demo/demoforest.html
+++ b/demo/demoforest.html
@@ -19,7 +19,7 @@ as well as some events keyUp(), mouseClick() etc.
 var N= 10; //number of data points
 var data = new Array(N);
 var labels= new Array(N);
-var tree= new dectreejs.RandomForest();
+var tree= new forestjs.RandomForest();
 var dirty= true;
 var ss= 50.0; // scaling factor for drawing
 var density= 10; // density of drawing. Decrease for higher resolution (but slower)
